# mdbook-last-changed

./: .gitignore  404.html  Cargo.toml  README.md  configuration.html  index.html  installation.html  license.html  print.html  requirements.html  searcher-c2a407aa.js  searchindex-23e42ec7.js  searchindex-b57fbac3.js  searchindex-c427b5e3.js  searchindex-d445c44c.js  searchindex.js  searchindex.json  toc-9db9db33.js  toc.html  toc.js
.github/workflows/: deploy.yml  mdbook.yml  tests.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  configuration.md  installation.md  license.md  requirements.md
src/: lib.rs
