[package]
name = "mdbook-last-changed"
version = "0.2.0"
description = "mdbook preprocessor to add the last modification date per page"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-last-changed"
repository = "https://github.com/badboy/mdbook-last-changed"
edition = "2021"

[dependencies]
mdbook = "0.4.33"
env_logger = "0.11.8"
log = "0.4"
clap = { version = "4.0.29", features = ["cargo"] }
serde_json = "1.0"
toml = "0.5.11"
xshell = "0.2.2"
